# internal/delivery/http/handler/role_handler.go
@@ -2,6 +2,7 @@ package handler
 
 import (
 	"github.com/gofiber/fiber/v3"
+	"github.com/google/uuid"
 	"github.com/rizalarfiyan/be-plant-factory/internal/delivery/http/request"
 	"github.com/rizalarfiyan/be-plant-factory/internal/delivery/http/request/filter"
 	"github.com/rizalarfiyan/be-plant-factory/internal/delivery/http/request/pagination"
@@ -22,6 +23,7 @@ type RoleHandler interface {
 	Update(c fiber.Ctx) error
 	Delete(c fiber.Ctx) error
 	Dropdown(c fiber.Ctx) error
+	SelectedDropdown(c fiber.Ctx) error
 }
 
 type roleHandler struct {
@@ -211,30 +213,26 @@ func (h roleHandler) Delete(c fiber.Ctx) error {
 	return response.New(c, code.Deleted)
 }
 
-// Dropdown godoc
-//
-//	@Summary		Role Dropdown
-//	@Description	Get role dropdown with search, pagination, and active_ids
-//	@ID				role-dropdown
-//	@Tags			Role
-//	@Produce		json
-//	@Security		CookieAccessToken
-//	@Param			search		query		string																		false	"Search by name (min 3 chars)"
-//	@Param			page		query		int																			false	"Page number"		default(1)
-//	@Param			page_size	query		int																			false	"Items per page"	default(10)
-//	@Param			active_ids	query		[]string																	false	"Active IDs"
-//	@Success		200			{object}	response.BasePaginationSwaggerResponse{data=[]response.DropdownResponse}	"Roles fetched successfully. Available code (LIST_FETCHED)"
-//	@Failure		400			{object}	response.BaseSwaggerValidationResponse{}									"Bad Request. Available code (VALIDATION_ERROR, BAD_REQUEST)"
-//	@Failure		401			{object}	response.BaseSwaggerEmptyResponse{}											"Unauthorized. Available code (UNAUTHORIZED)"
-//	@Failure		500			{object}	response.BaseSwaggerEmptyResponse{}											"Internal Server Error. Available code (INTERNAL_SERVER_ERROR)"
-//	@Router			/role/dropdown [get]
+// @Summary		Role Dropdown
+// @Description	Get role dropdown with search, pagination, and active_ids
+// @ID				role-dropdown
+// @Tags			Role
+// @Produce		json
+// @Security		CookieAccessToken
+// @Param			search		query		string																		false	"Search by name (min 3 chars)"
+// @Param			page		query		int																			false	"Page number"		default(1)
+// @Param			page_size	query		int																			false	"Items per page"	default(10)
+// @Success		200			{object}	response.BasePaginationSwaggerResponse{data=[]response.DropdownResponse}	"Roles fetched successfully. Available code (LIST_FETCHED)"
+// @Failure		400			{object}	response.BaseSwaggerValidationResponse{}									"Bad Request. Available code (VALIDATION_ERROR, BAD_REQUEST)"
+// @Failure		401			{object}	response.BaseSwaggerEmptyResponse{}											"Unauthorized. Available code (UNAUTHORIZED)"
+// @Failure		500			{object}	response.BaseSwaggerEmptyResponse{}											"Internal Server Error. Available code (INTERNAL_SERVER_ERROR)"
+// @Router			/role/dropdown [get]
 func (h roleHandler) Dropdown(c fiber.Ctx) error {
 	var req entity.DropdownFilter
 
 	err := helper.QueryBind(c,
 		helper.QueryField(&req.Search, search.Parse()),
 		helper.QueryField(&req.Pagination, pagination.Parse()),
-		helper.QueryField(&req.ActiveIDs, filter.ParseUUIDs("active_ids")),
 	)
 	if err != nil {
 		return err
@@ -251,4 +249,39 @@ func (h roleHandler) Dropdown(c fiber.Ctx) error {
 	}
 
 	return response.New(c, code.ListFetched, response.WithData(res), response.WithPagination(req.Pagination.ToResult(total)))
+}
+
+// SelectedDropdown godoc
+//
+//	@Summary		Role Selected Dropdown
+//	@Description	Get selected role dropdown items
+//	@ID				role-selected-dropdown
+//	@Tags			Role
+//	@Produce		json
+//	@Security		CookieAccessToken
+//	@Param			active_ids	query		[]string														false	"Active IDs"	collectionFormat(multi)
+//	@Success		200			{object}	response.BaseSwaggerResponse{data=[]response.DropdownResponse}	"Roles fetched successfully. Available code (LIST_FETCHED)"
+//	@Failure		400			{object}	response.BaseSwaggerValidationResponse{}						"Bad Request. Available code (VALIDATION_ERROR, BAD_REQUEST)"
+//	@Failure		401			{object}	response.BaseSwaggerEmptyResponse{}								"Unauthorized. Available code (UNAUTHORIZED)"
+//	@Failure		500			{object}	response.BaseSwaggerEmptyResponse{}								"Internal Server Error. Available code (INTERNAL_SERVER_ERROR)"
+//	@Router			/role/dropdown/selected [get]
+func (h roleHandler) SelectedDropdown(c fiber.Ctx) error {
+	var activeIds []uuid.UUID
+
+	err := helper.QueryBind(c, helper.QueryField(&activeIds, filter.ParseUUIDs("active_ids")))
+	if err != nil {
+		return err
+	}
+
+	items, err := h.useCase.SelectedDropdown(c.Context(), activeIds)
+	if err != nil {
+		return err
+	}
+
+	res := make([]response.DropdownResponse, len(items))
+	for i, item := range items {
+		res[i] = response.NewDropdownResponse(item)
+	}
+
+	return response.New(c, code.ListFetched, response.WithData(res))
 }
